samples/_failures_safe/1761243696_25a484_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e062bc7.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6e062bc7.c:173:13: error: expected expression at end of input
  173 |             tokens[token_count] =
      |             ^~~~~~
./samples/SAFE/__tmp_6e062bc7.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e062bc7.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e062bc7.c:173:13: error: expected declaration or statement at end of input
